Make sure the left and right column's content is visible if the main column does not contain any content yet (see #4893)

--- a/assets/contao/css/layout-uncompressed.css
+++ b/assets/contao/css/layout-uncompressed.css
@@ -86,6 +86,9 @@ select,input,textarea {
 		margin-right:0;
 	}
 }
+#main .inside {
+	min-height:1px; /* see #4893 */
+}
 
 /**
  * Flexible images and videos
